tests/liquid/pos/emp1.js
/*@ boop :: (list [number]) => {v:boolean | true} */
function boop(xs){
  var zogbert = emptyPoly(xs);
  return zogbert;
}
