tests/liquid/neg/list13-bad.js
/*@ listsum :: (list [number] + null) => list[number] */
function listsum(xs){
  var t = xs
  return t;
}

